force-app/main/default/objects/RS_Agent_Workflow_Choices__c/RS_Agent_Workflow_Choices__c.object-meta.xml
<CustomObject>
    <label>Agent Workflow Choices</label>
    <nameField>
        <displayFormat>AWC-{00000}</displayFormat>
        <label>Agent_Workflow_Choices Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agent Workflow Choices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>