force-app/main/default/objects/RS_Agent_Workflow_Choices__c/fields/Interaction_RecordId__c.field-meta.xml
<CustomField>
    <fullName>Interaction_RecordId__c</fullName>
    <label>Interaction RecordId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>