force-app/main/default/objects/RS_Agent_Workflow_Choices__c/fields/RS_Account__c.field-meta.xml
<CustomField>
    <fullName>RS_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>RS_Agent_Workflow_Choices</relationshipName>
    <type>Lookup</type>
</CustomField>