force-app/main/default/objects/RS_Agent_Workflow_Choices__c/fields/RS_Agent_Choices_Click_Path__c.field-meta.xml
<CustomField>
    <fullName>RS_Agent_Choices_Click_Path__c</fullName>
    <label>Agent Choices Click Path</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>