force-app/main/default/objects/RS_Agent_Workflow_Choices__c/fields/RS_Agent_Initial_Intent__c.field-meta.xml
<CustomField>
    <fullName>RS_Agent_Initial_Intent__c</fullName>
    <label>Agent Initial Intent</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>