force-app/main/default/objects/RS_Agent_Workflow_Choices__c/fields/RS_Case__c.field-meta.xml
<CustomField>
    <fullName>RS_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipName>RS_Agent_Workflow_Choices</relationshipName>
    <type>Lookup</type>
</CustomField>