force-app/main/default/objects/RS_Agent_Workflow_Choices__c/fields/RS_Chat_Transcript__c.field-meta.xml
<CustomField>
    <fullName>RS_Chat_Transcript__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Chat Transcript</label>
    <referenceTo>LiveChatTranscript</referenceTo>
    <relationshipName>RS_Agent_Workflow_Choices</relationshipName>
    <type>Lookup</type>
</CustomField>