force-app/main/default/objects/RS_Agent_Workflow_Choices__c/fields/RS_Choices__c.field-meta.xml
<CustomField>
    <fullName>RS_Choices__c</fullName>
    <label>Choices</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>