force-app/main/default/objects/RS_Agent_Workflow_Choices__c/fields/RS_Confirmation_Screen_Used__c.field-meta.xml
<CustomField>
    <fullName>RS_Confirmation_Screen_Used__c</fullName>
    <label>Confirmation Screen Used</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>