force-app/main/default/objects/RS_Agent_Workflow_Choices__c/fields/RS_Contact__c.field-meta.xml
<CustomField>
    <fullName>RS_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Agent Workflow Choices</relationshipLabel>
    <relationshipName>Agent_Workflow_Choices</relationshipName>
    <type>Lookup</type>
</CustomField>