force-app/main/default/objects/RS_Agent_Workflow_Choices__c/fields/RS_Is_Save_Successful__c.field-meta.xml
<CustomField>
    <fullName>RS_Is_Save_Successful__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Save Successful</label>
    <type>Checkbox</type>
</CustomField>