force-app/main/default/objects/RS_Agent_Workflow_Choices__c/fields/RS_Messaging_Session__c.field-meta.xml
<CustomField>
    <fullName>RS_Messaging_Session__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Messaging Session</label>
    <referenceTo>MessagingSession</referenceTo>
    <relationshipLabel>Agent Workflow Choices</relationshipLabel>
    <relationshipName>Agent_Workflow_Choices</relationshipName>
    <type>Lookup</type>
</CustomField>