force-app/main/default/objects/RS_Agent_Workflow_Choices__c/fields/RS_User__c.field-meta.xml
<CustomField>
    <fullName>RS_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>RS_Agent_Workflow_Choices</relationshipName>
    <type>Lookup</type>
</CustomField>