force-app/main/default/objects/RS_Agent_Workflow_Choices__c/fields/RS_Voice_Call__c.field-meta.xml
<CustomField>
    <fullName>RS_Voice_Call__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Voice Call</label>
    <referenceTo>VoiceCall</referenceTo>
    <relationshipName>RS_Agent_Workflow_Choices</relationshipName>
    <type>Lookup</type>
</CustomField>