force-app/main/default/objects/RS_Agent_Workflow_Choices__c/fields/Saved_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Saved_Record_Id__c</fullName>
    <label>Saved Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>